--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--===HOME===-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bhomit</span><br/>Interactive<br/>Media Developer</h1>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bhomit</span><br/>Immersive<br/>Reality Engineer</h1>
                 <a href="#" class="button">Contact</a>
             </div>
             <div class="home__social">
@@ -134,5 +134,4 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./assets/js/main.js"></script>
 </body>
-
 </html>
