--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <div class="skills__container bd-grid">
                 <div>
                     <h2 class="skills__subtitle">Professional Skills</h2>
-                    <p class="skills__text">Over the course of 4 plus years <span class="home__title-color">I've</span> had a chance to gain and work on multiple skills</p>
+                    <p class="skills__text">Over the course of<span class="home__title-color"></span>4 plus years</span> I've had a chance to gain and work on multiple skills</p>
                     <div class="skills__data">
                         <div class="skills__names">
                             <!-- <i class='bx bxl-javascript' ></i> -->
