--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="home__social">
                 <a href="https://www.linkedin.com/in/bhomit-bhandari-91711472/" class="home__social-icon"><i class="bx bxl-linkedin"></i></a>
-                <a href="#" class="home__social-icon"><i class='bx bxl-medium' ></i></a>
+                <a href="https://medium.com/@bhandaribhomit" class="home__social-icon"><i class='bx bxl-medium' ></i></a>
                 <a href="https://github.com/hazelWolf" class="home__social-icon"><i class='bx bxl-github'></i></a>
             </div>
             <div class="home__img">
@@ -64,10 +64,9 @@
             <div class="skills__container bd-grid">
                 <div>
                     <h2 class="skills__subtitle">Professional Skills</h2>
-                    <p class="skills__text">Over the course of <span class="home__title-color">4 plus years</span> I've had a chance to gain and work on multiple skills</p>
+                    <p class="skills__text">Over the course of <span class="home__title-color">4 plus years</span> I've had a chance to gain multiple skills and work on many frameworks, apart from being fluent in <span class="home__title-color">JavaScript, C#, C++ and Python</span> some of the frameworks/technologies/engine I have worked on include</p>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <!-- <i class='bx bxl-javascript' ></i> -->
                             <i class='bx skills__icon'><img src="./assets/img/unity.png" width="24px" height="24px"></i>
                             <span class="skills__name">&nbspUnity3D</span>
                         </div>
@@ -76,12 +75,36 @@
                     </div>
                     <div class="skills__data">
                         <div class="skills__names">
-                            <i class='bx bxl-nodejs skills__icon' ></i>
+                            <i class='bx bxl-javascript skills__icon js' ></i>
+                            <span class="skills__name">JavaScript</span>
+                        </div>
+                        <div><span class="skills__percentage">85%</span></div>
+                        <div class="skills__bar skills__node"></div>
+                    </div>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class='bx bxl-nodejs skills__icon node' ></i>
                             <span class="skills__name">NodeJS</span>
                         </div>
                         <div><span class="skills__percentage">85%</span></div>
                         <div class="skills__bar skills__node"></div>
                     </div>
+                    <div class="skills__data">
+                        <div class="skills__names">
+                            <i class='bx bxl-react skills__icon' ></i>
+                            <span class="skills__name">React</span>
+                        </div>
+                        <div><span class="skills__percentage">50%</span></div>
+                        <div class="skills__bar skills__react"></div>
+                    </div>
+                    <!-- <div class="skills__data">
+                        <div class="skills__names">
+                            <i class='bx skills__icon'><img src="./assets/img/unreal.png" width="26px" height="26px"></i>
+                            <span class="skills__name">&nbspUnreal Engine</span>
+                        </div>
+                        <div><span class="skills__percentage">30%</span></div>
+                        <div class="skills__bar skills__unreal"></div>
+                    </div> -->
                 </div>
                 <div>
                     <img src="assets/img/work3.jpg" alt="" class="skills__img">
@@ -125,7 +148,7 @@
     <footer class="footer">
         <p class="footer__title">Bhomit Bhandari</p>
         <div class="footer__social">
-            <a href="https://www.instagram.com/_yourshittyphotos_/" class="footer__icon"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.instagram.com/_immersive_realities/" class="footer__icon"><i class='bx bxl-instagram'></i></a>
             <a href="https://twitter.com/BhandariBhomit" class="footer__icon"><i class='bx bxl-twitter'></i></a>
             <a href="https://www.youtube.com/channel/UC2bgyjVVBskUzTbq7ltwo2w" class="footer__icon"><i class='bx bxl-youtube' ></i></a>
         </div>
