--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--===HOME===-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bhomit</span><br/>Immersive<br/>Reality Engineer</h1>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bhomit</span>,<br/>I engineer Immersive<br/>Realities</h1>
                 <a href="#" class="button">Contact</a>
             </div>
             <div class="home__social">
@@ -148,7 +148,7 @@
     <footer class="footer">
         <p class="footer__title">Bhomit Bhandari</p>
         <div class="footer__social">
-            <a href="https://www.instagram.com/_immersive_realities/" class="footer__icon"><i class='bx bxl-instagram'></i></a>
+            <a href="https://www.instagram.com/_hazelwolf_/" class="footer__icon"><i class='bx bxl-instagram'></i></a>
             <a href="https://twitter.com/BhandariBhomit" class="footer__icon"><i class='bx bxl-twitter'></i></a>
             <a href="https://www.youtube.com/channel/UC2bgyjVVBskUzTbq7ltwo2w" class="footer__icon"><i class='bx bxl-youtube' ></i></a>
         </div>
