--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--===HOME===-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bhomit</span>,<br/>I engineer Immersive<br/>Realities</h1>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bhomit</span>,<br/> engineer Immersive<br/>Realities</h1>
                 <a href="#" class="button">Contact</a>
             </div>
             <div class="home__social">
@@ -64,7 +64,7 @@
             <div class="skills__container bd-grid">
                 <div>
                     <h2 class="skills__subtitle">Professional Skills</h2>
-                    <p class="skills__text">Over the course of <span class="home__title-color">4 plus years</span> I've had a chance to gain multiple skills and work on many frameworks, apart from being fluent in <span class="home__title-color">JavaScript, C#, C++ and Python</span> some of the frameworks/technologies/engine I have worked on include</p>
+                    <p class="skills__text">Over the course of <span class="home__title-color">5 years</span> I've had a chance to gain multiple skills and work on many frameworks, apart from being fluent in <span class="home__title-color">JavaScript, C#, C++ and Python</span> some of the frameworks/technologies/engine I have worked on include</p>
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx skills__icon'><img src="./assets/img/unity.png" width="24px" height="24px"></i>
