--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <!--===HOME===-->
         <section class="home bd-grid" id="home">
             <div class="home__data">
-                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bhomit</span>,<br/> engineer Immersive<br/>Realities</h1>
+                <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Bhomit</span>,<br/>Immersive Realities<br/> engineer </h1>
                 <a href="#" class="button">Contact</a>
             </div>
             <div class="home__social">
