--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="home__social">
                 <a href="https://www.linkedin.com/in/bhomit-bhandari-91711472/" class="home__social-icon"><i class="bx bxl-linkedin"></i></a>
-                <a href="https://medium.com/@bhandaribhomit" class="home__social-icon"><i class='bx bxl-medium' ></i></a>
+                <a href="https://bhandaribhomit.medium.com/" class="home__social-icon"><i class='bx bxl-medium' ></i></a>
                 <a href="https://github.com/hazelWolf" class="home__social-icon"><i class='bx bxl-github'></i></a>
             </div>
             <div class="home__img">
