updated for notion learnings

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a href="https://www.linkedin.com/in/bhomit-bhandari-91711472/" class="home__social-icon"><i class="bx bxl-linkedin"></i></a>
                 <a href="https://bhandaribhomit.medium.com/" class="home__social-icon"><i class='bx bxl-medium' ></i></a>
                 <a href="https://github.com/hazelWolf" class="home__social-icon"><i class='bx bxl-github'></i></a>
+                <a href="https://www.notion.so/Vidyop-rjita-8a34b02c937449e6800dcc32d94a8f30" class="home__social-icon"><i class='bx bx-book-bookmark'></i></a>
             </div>
             <div class="home__img">
                 <img src="./assets/img/bokeh.jpg" alt="">
