--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
                 <a href="https://www.notion.so/Vidyop-rjita-8a34b02c937449e6800dcc32d94a8f30" class="home__social-icon"><i class='bx bx-book-bookmark'></i></a>
             </div>
             <div class="home__img">
-                <img src="./assets/img/bokeh.jpg" alt="">
+                <img src="./assets/img/bokeh.png" alt="">
             </div>
         </section>
         <section class="about section " id="about">
             <h2 class="section-title">About</h2>
             <div class="about__container bd-grid">
                 <div class="about__img">
-                    <img src="assets/img/dp.png" alt="">
+                    <img src="assets/img/dp.jpg" alt="">
                 </div>
                 
                 <div>
@@ -65,7 +65,7 @@
             <div class="skills__container bd-grid">
                 <div>
                     <h2 class="skills__subtitle">Professional Skills</h2>
-                    <p class="skills__text">Over the course of <span class="home__title-color">5 years</span> I've had a chance to gain multiple skills and work on many frameworks, apart from being fluent in <span class="home__title-color">JavaScript, C#, C++ and Python</span> some of the frameworks/technologies/engine I have worked on include</p>
+                    <p class="skills__text">Over the course of <span class="home__title-color">8 years</span> I've had a chance to gain multiple skills and work on many frameworks, apart from being fluent in <span class="home__title-color">JavaScript, C#, C++ and Python</span> some of the frameworks/technologies/engine I have worked on include</p>
                     <div class="skills__data">
                         <div class="skills__names">
                             <i class='bx skills__icon'><img src="./assets/img/unity.png" width="24px" height="24px"></i>
