--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 
                 <div>
                     <h2 class="about__subtitle">Bhomit Bhandari</h2>
-                    <p class="about__text">Next-Gen Tech enthusiast, exploring how tech can revolutionize various industries and change lives. A man who believes a good team increases the probability of success. Always excited to work with innovative people and contribute in their vision. Currently part of Extended Reality technical consulting group at <span class="home__title-color">Cognizant</span> . Hands on with Unity,NodeJS,AWS and other AR/VR/AI related tech. </p>           
+                    <p class="about__text">Next-Gen Tech enthusiast, exploring how tech can revolutionize various industries and change lives. A man who believes a good team increases the probability of success. Always excited to work with innovative people and contribute in their vision. Currently leading the Digital Twins & XR engineering teams  at <span class="home__title-color">Ascendion</span> . Hands on with Unity,NodeJS,AWS and other AR/VR/AI related tech. </p>           
                 </div>                                   
             </div>
         </section>
